@@ -1,3 +1,15 @@
+Sun Jun 29 19:19:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/inlinetest.rb (InlineTest.in_progname): workaround for frozen
+	  $0.  [ruby-dev:35261]
+
+	* lib/test/unit/ui/console/testrunner.rb (TestRunner#finished): ditto.
+
+Sun Jun 29 19:19:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ruby.c (set_arg0, ruby_prog_init): freeze $0.  a patch from Keita
+	  Yamaguchi <keita.yamaguchi at gmail.com>.
+
 Sun Jun 29 18:33:33 2008  Tanaka Akira  <akr@fsij.org>
 
 	* process.c: include sys/resource.h if HAVE_SYS_RESOURCE_H is defined.
